[gd_scene load_steps=4 format=3 uid="uid://cinkdnumes67v"]

[ext_resource type="PackedScene" uid="uid://beqhq1817oav7" path="res://2d/wall/wall.tscn" id="1_orey4"]
[ext_resource type="Script" path="res://2d/demo_scene/demo_scene_2d.gd" id="1_s3u83"]
[ext_resource type="PackedScene" uid="uid://c561j8bdsy66w" path="res://2d/player/player_2d.tscn" id="3_e1cyj"]

[node name="DemoScene2D" type="Node2D"]
script = ExtResource("1_s3u83")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -10, -10, 0, 0, 10, 10, 0)

[node name="Walls" type="Node2D" parent="."]

[node name="ButtomWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(0, 1296)

[node name="RightWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(2304, 0)
rotation = -1.5708

[node name="TopWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(0, -1296)
rotation = 3.14159

[node name="LeftWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(-2304, 0)
rotation = 1.5708

[node name="Player2D" parent="." instance=ExtResource("3_e1cyj")]
position = Vector2(0, 100)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Player speed"
horizontal_alignment = 1

[node name="PlayerSpeed" type="VSlider" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 1
max_value = 500.0
value = 100.0

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Player
accelerate vector"
horizontal_alignment = 1

[node name="PlayerAccelerateVectorX" type="LineEdit" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "X"

[node name="PlayerAccelerateVectorY" type="LineEdit" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "Y"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Bullet speed"

[node name="BulletSpeed" type="VSlider" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 1
min_value = 10.0
max_value = 500.0
value = 200.0

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Bullet
accelerate vector"
horizontal_alignment = 1

[node name="BulletAccelerateVectorX" type="LineEdit" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
placeholder_text = "X"

[node name="BulletAccelerateVectorY" type="LineEdit" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
placeholder_text = "Y"

[node name="ShowHideUi" type="Button" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Show / Hide"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PlayerSpeed" to="." method="_on_player_speed_value_changed"]
[connection signal="text_changed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/PlayerAccelerateVectorX" to="." method="_on_player_accelerate_vector_x_text_changed"]
[connection signal="text_changed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/PlayerAccelerateVectorY" to="." method="_on_player_accelerate_vector_y_text_changed"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BulletSpeed" to="." method="_on_bullet_speed_value_changed"]
[connection signal="text_changed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/BulletAccelerateVectorX" to="." method="_on_bullet_accelerate_vector_x_text_changed"]
[connection signal="text_changed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/BulletAccelerateVectorY" to="." method="_on_bullet_accelerate_vector_y_text_changed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/ShowHideUi" to="." method="_on_show_hide_ui_pressed"]
